Thu Oct  1 18:47:46 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2935_Regression/run_test.pl:
          Resolved some fuzz errors.

Thu Oct  1 17:59:12 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_component/component_exs.cpp:
        * TAO_IDL/be/be_visitor_component/component_svh.cpp:
        * TAO_IDL/be/be_visitor_component/component_svs.cpp:

          Eliminated duplicate output streams.

Thu Oct  1 14:36:42 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * bin/tao_orb_tests.lst:
          Enabled a some tests for ce/labview/fuzz.

        * tests/Bug_2869_Regression/run_test.pl:
        * tests/Bug_2935_Regression/run_test.pl:
        * tests/Bug_2953_Regression/run_test.pl:
          Converted to the new test framework

Thu Oct  1 13:08:24 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Big_Reply/run_test.pl:
        * tests/Big_Reply/server.cpp:
          Fixed test errors.

        * tests/CSD_Strategy_Tests/TP_Test_1/run_test.pl:
          Fixed some minor bugs in this script.

Thu Oct  1 12:43:47 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * tests/Bug_2593_Regression/run_test.pl:
        * tests/Bug_2734_Regression/run_test.pl:
        * tests/Bug_2735_Regression/run_test.pl:
          Resolved some fuzz errors.

Thu Oct  1 08:21:32 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_2494_Regression/run_test.pl
        * tests/Bug_2593_Regression/run_test.pl
        * tests/Bug_2734_Regression/run_test.pl
        * tests/Bug_2735_Regression/run_test.pl
        * tests/Bug_2804_Regression/run_test.pl
        * tests/Bug_2844_Regression/run_test.pl
        * tests/Bug_3276_Regression/run_test.pl
          Converted to the new test framework

Wed Sep 30 18:29:32 UTC 2009  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_interface/interface_ex_idl.cpp:
        * TAO_IDL/be/be_visitor_component/component_ex_idl.cpp:
